<resources>
    <string name="app_name">Aluno Mobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_home">Home</string>
    <string name="nav_aluno">Aluno</string>
    <string name="nav_professor">Professor</string>
    <string name="nav_disciplina">Disciplina</string>
    <string name="nav_turma">Turma</string>
    <string name="nav_sobre">Sobre</string>
    <string name="tiltle_cadastros">Cadastros</string>
    <string name="tiltle_sistema">Sistema</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tiltle_lancamentos">Lançamentos</string>
    <string name="nav_notas">Notas</string>
    <string name="nav_frequencias">Frequências</string>
    <string name="nav_email">henrique.maltauro.dev@gmail.com</string>
    <string name="action_hello_world">Hello World</string>
    <string name="ra">RA</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="data_nascimento">Data de Nascimento</string>
    <string name="data_matricula">Data de Matrícula</string>
    <string name="fab_add_aluno">Cadastrar Aluno</string>
    <string name="fab_grava_aluno">Grava Aluno</string>
    <string name="cad_aluno">Cadastro de Aluno</string>
    <string name="app_versao">Versão %1$s</string>
    <string name="label_00188582">00188582 - Henrique Augusto Maltauro</string>
    <string name="app_boas_vindas">Bem Vindo ao Aluno Mobile</string>
    <string name="cad_professor">Cadastro de Professor</string>
    <string name="cad_disciplina">Cadastro de Disciplina</string>
    <string name="cad_turma">Cadastro de Turma</string>
    <string name="fab_add_disciplina">Cadastrar Disciplina</string>
    <string name="fab_add_professor">Cadastrar Professor</string>
    <string name="fab_add_turma">Cadastrar Turma</string>
    <string name="text_view_ra">RA:</string>
    <string name="text_view_cpf">CPF:</string>
    <string name="text_view_nome">Nome:</string>
    <string name="text_view_data_matricula">Dt. Matrícula:</string>
    <string name="text_view_data_nascimento">Dt. Nascimento:</string>
    <string name="nome_placeholder">Nome Sobrenome</string>
    <string name="ra_placeholder">00000000</string>
    <string name="cpf_placeholder">000.000.000-00</string>
    <string name="data_placeholder">00/00/0000</string>
    <string name="nav_curso">Curso</string>
    <string name="codigo_mec">Código MEC</string>
    <string name="descricao">Descrição</string>
    <string name="grau_academico">Grau Acadêmico</string>
    <string name="selecione_grau_academico">Selecione um grau acadêmico</string>
    <string name="cad_curso">Cadastro de Curso</string>
    <string name="descricao_placeholder">Descrição</string>
    <string name="codigo_mec_placeholder">0000000</string>
    <string name="text_view_codigo_mec">Código MEC:</string>
    <string name="text_view_grau_academico">Grau:</string>
    <string name="grau_academico_placeholder">Grau Acadêmico</string>
    <string name="hora_aula">Hora-aula</string>
    <string name="quantidade_aulas">Quantidade de aulas</string>
    <string name="professor">Professor</string>
    <string name="text_view_professor">Professor:</string>
    <string name="text_view_horas_aulas">Horas-aulas:</string>
    <string name="horas_aulas_placeholder">00:00</string>
    <string name="text_view_quantidade_aulas">Quantidade de aulas:</string>
    <string name="quantidade_aulas_placeholder">00</string>
    <string name="curso_placeholder">0000/0 - Curso Descrição</string>
    <string name="ano_academico_placeholder">1º Ano</string>
    <string name="status_placeholder">Status</string>
    <string name="periodo_placeholder">0000/0</string>
    <string name="curso">Curso</string>
    <string name="ano_academico">Ano Acadêmico</string>
    <string name="regime_academico">Regime Acadêmico</string>
    <string name="ano_periodo">Ano Período</string>
    <string name="semestre_periodo">Semestre Período</string>
    <string name="alunos">Alunos</string>
    <string name="disciplinas">Disciplinas</string>
    <string name="nav_grade_curricular">Grade Curricular</string>
    <string name="disciplinas_turma">Disciplinas da Turma</string>
    <string name="cad_grade_curricular">Cadastro de Grade Curricular</string>
    <string name="grade_curricular">Grade Curricular</string>
    <string name="ano_semestre_academico_placeholder">1º Ano/1º Semestre</string>
    <string name="ano_descricao_placeholder">0000 - Descrição</string>
    <string name="sw_ativo">Ativo</string>
    <string name="turma">Turma</string>
    <string name="aluno">Aluno</string>
    <string name="bimestre">Bimestre</string>
    <string name="nota">Nota</string>
    <string name="disciplina">Disciplina</string>
    <string name="nav_lancamento_notas">Lançamento de Notas</string>
    <string name="nav_lancamento_frequencias">Lançamento de Frequências</string>
    <string name="aula_numero">Aula Nº</string>
    <string name="text_view_aulas_ministradas">Aulas ministradas:</string>
    <string name="text_view_aulas_totais">Aulas totais:</string>
    <string name="alunos_turma">Alunos da Turma</string>
    <string name="text_view_exibir_status_disciplinas">Clique para exibir os status das disciplinas</string>
    <string name="text_view_exibir_status_alunos">Clique para exibir os status dos alunos</string>
    <string name="text_view_frequencia">Frequencia:</string>
    <string name="frequencia_placeholder">100%</string>
    <string name="text_view_primeiro_bimestre">1º Bimestre:</string>
    <string name="nota_placeholder">100</string>
    <string name="text_view_segundo_bimestre">2º Bimestre:</string>
    <string name="text_view_terceiro_bimestre">3º Bimestre:</string>
    <string name="text_view_quarto_bimestre">4º Bimestre:</string>
    <string name="text_view_media">Média:</string>
    <string name="selecione_professor">Selecione um professor</string>
    <string name="selecione_curso">Selecione um curso</string>
    <string name="selecione_ano_academico">Selecione um ano acadêmico</string>
    <string name="selecione_regime_academico">Selecione um regime acadêmico</string>
    <string name="selecione_disciplinas">Selecione e adicione uma disciplina</string>
    <string name="selecione_grade_curricular">Selecione uma grade curricular</string>
    <string name="selecione_alunos">Selecione e adicione um aluno</string>
    <string name="selecione_turma">Selecione uma turma</string>
    <string name="selecione_disciplina">Selecione uma disciplina</string>
    <string name="selecione_aula_numero">Selecione uma aula</string>
    <string name="selecione_aluno">Selecione um aluno</string>
    <string name="selecione_bimestre">Selecione um bimestre</string>
    <string name="selecione_semestre_periodo">Selecione um semestre</string>
    <string name="action_easter_egg">Não existe nenhum easter egg aqui</string>
</resources>