<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/gray"
    android:id="@+id/ct_nota"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.NotaFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Curso-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/layout_spinner">

            <fr.ganfra.materialspinner.MaterialSpinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/sp_curso_nota"
                app:ms_floatingLabelText="@string/curso"
                app:ms_hint="@string/selecione_curso"
                style="@style/material_spinner"/>

        </LinearLayout>

        <!--Turma-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/ln_turma_nota"
            style="@style/layout_spinner">

            <fr.ganfra.materialspinner.MaterialSpinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/sp_turma_nota"
                app:ms_floatingLabelText="@string/turma"
                app:ms_hint="@string/selecione_turma"
                style="@style/material_spinner"/>

        </LinearLayout>

        <!--Disciplina-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/ln_disciplina_nota"
            style="@style/layout_spinner">

            <fr.ganfra.materialspinner.MaterialSpinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/sp_disciplina_nota"
                app:ms_floatingLabelText="@string/disciplina"
                app:ms_hint="@string/selecione_disciplina"
                style="@style/material_spinner"/>

        </LinearLayout>

        <!--Aluno-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/ln_aluno_nota"
            style="@style/layout_spinner">

            <fr.ganfra.materialspinner.MaterialSpinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/sp_aluno_nota"
                app:ms_floatingLabelText="@string/aluno"
                app:ms_hint="@string/selecione_aluno"
                style="@style/material_spinner"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/ln_bimestre_nota"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <!--Regime Acadêmico-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                style="@style/layout_spinner">

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/sp_bimestre_nota"
                    app:ms_floatingLabelText="@string/bimestre"
                    app:ms_hint="@string/selecione_bimestre"
                    style="@style/material_spinner"/>

            </LinearLayout>

            <!--Horas aulas-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:hint="@string/nota"
                style="@style/text_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:digits="0123456789,"
                    android:id="@+id/edt_nota"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:gravity="bottom|end"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_limpa_nota"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_primary"
            android:src="@drawable/ic_limpa"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            app:tint="@null" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_grava_nota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:backgroundTint="@color/green"
            android:src="@drawable/ic_grava"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            app:tint="@null" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>