<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cv_aluno"
        app:cardElevation="7dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:text="@string/nome_placeholder"
                android:id="@+id/text_view_nome_aluno"
                android:textAppearance="@style/text_view_list_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textview.MaterialTextView
                android:text="@string/ra_placeholder"
                android:id="@+id/text_view_ra_aluno"
                android:textAppearance="@style/text_view_list_sub_title"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:text="@string/text_view_cpf"
                    android:layout_marginEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textview.MaterialTextView
                    android:text="@string/cpf_placeholder"
                    android:id="@+id/text_view_cpf_aluno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:text="@string/text_view_data_nascimento"
                    android:layout_marginEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textview.MaterialTextView
                    android:text="@string/data_placeholder"
                    android:id="@+id/text_view_data_nascimento_aluno"
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textview.MaterialTextView
                    android:text="@string/text_view_data_matricula"
                    android:layout_marginEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textview.MaterialTextView
                    android:text="@string/data_placeholder"
                    android:id="@+id/text_view_data_matricula_aluno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
<!--114-->