<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:text="@string/descricao_placeholder"
                android:id="@+id/text_view_descricao"
                android:textAppearance="@style/text_view_list_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:text="@string/text_view_professor"
                    android:textColor="@color/gray_dark"
                    android:layout_marginEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textview.MaterialTextView
                    android:text="@string/nome_placeholder"
                    android:textColor="@color/gray_dark"
                    android:id="@+id/text_view_nome_professor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:text="@string/text_view_aulas_ministradas"
                    android:textColor="@color/gray_dark"
                    android:layout_marginEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textview.MaterialTextView
                    android:text="@string/quantidade_aulas_placeholder"
                    android:id="@+id/text_view_aulas_ministradas"
                    android:textColor="@color/gray_dark"
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textview.MaterialTextView
                    android:text="@string/text_view_aulas_totais"
                    android:textColor="@color/gray_dark"
                    android:layout_marginEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textview.MaterialTextView
                    android:text="@string/quantidade_aulas_placeholder"
                    android:id="@+id/text_view_aulas_totais"
                    android:textColor="@color/gray_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:text="@string/text_view_exibir_status_alunos"
                android:layout_marginTop="10dp"
                android:textColor="@color/gray_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>