<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="3dp"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:text="@string/nome_placeholder"
                android:id="@+id/text_view_aluno_turma"
                android:textAppearance="@style/text_view_list_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textview.MaterialTextView
                android:text="@string/ra_placeholder"
                android:id="@+id/text_view_ra_aluno_turma"
                android:textAppearance="@style/text_view_list_sub_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textview.MaterialTextView
                android:text="@string/status_placeholder"
                android:id="@+id/text_view_status_aluno_turma"
                android:textAppearance="@style/text_view_list_sub_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>