<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:text="@string/ano_descricao_placeholder"
                android:id="@+id/text_view_ano_curso_turma"
                android:textAppearance="@style/text_view_list_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textview.MaterialTextView
                android:text="@string/ano_semestre_academico_placeholder"
                android:id="@+id/text_view_ano_semestre_academico_turma"
                android:textAppearance="@style/text_view_list_sub_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textview.MaterialTextView
                android:text="@string/text_view_exibir_status_disciplinas"
                android:layout_marginTop="10dp"
                android:textColor="@color/gray_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>